# zitadel-operator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml
.github/workflows/: docker-publish.yml  e2e.yml
src/: lib.rs  main.rs  util.rs
src/controllers/: application.rs  human_user.rs  mod.rs  organization.rs  project.rs  project_role.rs  user_grant.rs
src/schema/: application.rs  human_user.rs  mod.rs  organization.rs  project.rs  project_role.rs  user_grant.rs
tests/: e2e_state_machine.rs
tests/e2e/: executor.rs  mod.rs  state_machine.rs
tests/fixtures/: e2e-postgres.yaml  e2e-zitadel-values.yaml
