[package]
name = "zitadel_operator"
version = "0.1.0"
edition = "2021"

default-run = "zitadel_operator"

[features]
default = []
dotenv = ["dep:dotenv"]

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = { version = "0.15.0", optional = true }
futures = "0.3.31"
k8s-openapi = { version = "0.24.0", features = ["latest", "schemars"] }
kube = { version = "0.98.0", features = ["runtime", "client", "derive", "unstable-runtime"] }
openidconnect = { version = "3.5.0", default-features = false, features = ["native-tls"] }
reqwest = { version = "0.12.12", features = ["json", "stream", "rustls-tls-native-roots"] }
rustls-native-certs = "0.8.1"
schemars = { version = "0.8.21", features = ["url"] }
serde = "1.0.217"
serde_json = "1.0.135"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["tls-native-roots"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
zitadel = { version = "5.3.2", default-features = false, features = ["api", "interceptors", "credentials", "tls-roots"] }
